# quick-search

./: .gitignore  Cargo.toml  README.md  build.rs  embed.rc
src/: config.rs  main.rs
src/search/: englishdictionary.rs  google.rs  math.rs  mod.rs  urbandictionary.rs  vteverything.rs  windowsapps.rs
src/search_instance/: mod.rs
src/search_instance/app/: holder.rs  mod.rs
src/search_instance/config/: mod.rs
src/tray_icon/: mod.rs
