[package]
name = "quick-search"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# bin dependencies
[dependencies]
windows-hotkeys = "0.2.1"
minwin = { git = "https://github.com/Jascha-N/minwin-rs" }
directories = "5.0.1"
lazy_static = "1.4.0"
quick-search-lib = { path = "../quick-search-lib" }
log = "0.4.20"
env_logger = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
ctrlc = "3.4.2"
rusty_audio = "1.4.1"
include-flate = "0.3.0"
egui_overlay = "0.7.0"
egui = "0.25.0"
winapi = { version = "0.3.9", features = ["synchapi"] }
anyhow = "1.0.80"
