[package]
name = "quick-search"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = []

# bin dependencies
[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
windows-hotkeys = "0.2.1"
minwin = { git = "https://github.com/Jascha-N/minwin-rs" }
directories = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
env_logger = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["preserve_order"] }
ctrlc = "3.4.2"
rusty_audio = "1.4.1"
include-flate = "0.3.0"
egui_overlay = "0.8.0"
egui = "0.26.2"
egui_extras = "0.26.2"
winapi = { version = "0.3.9", features = ["synchapi"] }
anyhow = "1.0.80"
crossbeam = "0.8.4"
# tray-icon = "0.11.3"
image = "0.24.9"
tray-item = { git = "https://github.com/davehorner/tray-item-rs" }
rfd = "0.14.0"
auto-launch = "0.5.0"
chrono = { version = "0.4.19", features = [] }
chrono-tz = { version = "0.8.6", features = ["serde"] }

[build-dependencies]
embed-resource = "2.4.1"